--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 
 </head>
 
@@ -23,7 +24,7 @@
       </div>
       <nav>
         <i class="fa fa-bars"></i>
-        <ul class="nav">
+        <ul class="nav_content">
           <li><a href="">Home</a></li>
           <li><a href="">About Us</a></li>
           <li><a href="">Service</a></li>
@@ -138,13 +139,13 @@
       <form action="">
         <div class="input_wrapper">
           <div>
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Company name">
-            <input type="email" placeholder="Email">
+            <input type="text" placeholder="Name" />
+            <input type="email" placeholder="Email" />
+            <input type="number" placeholder="Phone no" />
           </div>
           <div>
-            <input type="number" placeholder="Phone no">
             <input type="text" placeholder="How can we help?">
+            <input type="file" />
             <span>we respect your privacy</span>
           </div>
         </div>
